<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">shiwang</string>
    <string name="compose">Compose</string>
    <string name="profile_me">My Profile Picture</string>
    <string name="cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="hint">What is happening?</string>
    <string name="wordLeft">140/140</string>
    <string name="name">Name</string>
    <string name="tagline">TagLine</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

</resources>