<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/tweet" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/cancel" />

    <ImageView
        android:id="@+id/ivProfileMe"
        android:contentDescription="@string/profile_me"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/btnCancel"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@+id/btnCancel"
        android:layout_toEndOf="@+id/ivProfileMe"
        android:ellipsize="end"
        android:lines="1"
        android:padding="20dp"
        android:textSize="18sp" />

    <MultiAutoCompleteTextView
        android:id="@+id/tvContent"
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvCount" />

    <TextView
        android:id="@+id/tvCount"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/ivProfileMe"
        android:text="@string/wordLeft"
        android:layout_alignEnd="@+id/btnCancel"
        android:layout_alignParentStart="true" />
</RelativeLayout>